# Skyflip

./: .gitignore  README.md  config.example.json  pyproject.toml
data/: README.md  accessories.json  ah_watchlist.json  bazaar_conversions.json  bazaar_risk_rules.json  craft_recipes.json
skyflip/: accessories.py  accessory_analysis.py  accessory_database.py  accessory_filters.py  accessory_models.py  accessory_views.py  ah_underpriced.py  bazaar.py  bazaar_compression.py  bazaar_order.py  bazaar_spread.py  bazaar_spread_analysis.py  bazaar_spread_history.py  bazaar_spread_models.py  bazaar_spread_risk.py  bazaar_spread_support.py  cache.py  cli.py  cofl.py  dashboard.py  dashboard_menu.py  dashboard_menu_sorting.py  dashboard_menu_ui.py  dashboard_modules.py  dashboard_results.py  dataset_repair.py  dataset_validation.py  datasets.py  http.py  market_speed.py  models.py  module_presets.py  module_recommendations.py  onboarding.py  pricing.py  profile_fetcher.py  profile_parser.py  recipes.py  report.py  scoring.py  (+5 more)
tests/: test_accessories.py  test_bazaar.py  test_bazaar_spread.py  test_cli.py  test_cofl.py  test_dashboard_features.py  test_dashboard_menu.py  test_dashboard_menu_ui.py  test_dashboard_modules.py  test_dashboard_results.py  test_datasets.py  test_market_speed.py  test_module_presets.py  test_module_recommendations.py  test_onboarding.py  test_pricing.py  test_profile_fetcher_config.py  test_profile_parser.py  test_recipes.py  test_scoring.py  test_settings_profiles.py  test_terminal_layout.py  test_warning_summary.py
